Fixed issues with gallery on Safari.
Fixed issues with gallery where the img would appeared stretched on Safari but normal in Chrome. Just added justify-content and align-items in gallery div. Issues solved.

--- a/style.css
+++ b/style.css
@@ -60,9 +60,11 @@ h5 {
 
 .gallery {
     display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-.galleries img {
+.gallery img {
     height: auto;
     width: 200px;
     margin-left: auto;
@@ -128,7 +130,7 @@ h5 {
     margin-bottom: 0;
 }
 
-@media only screen and (min-width: 1368px) {
+@media only screen and (min-width: 1050px) {
     .contact .email .phone {
         font-size: 1.35rem;
     }
